--- a/index.html
+++ b/index.html
@@ -1,83 +1,62 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Memulai dengan HTML dan CSS</title>
-    <style>
-        /* CSS dapat ditambahkan di sini */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 16px;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            background-color: #fff;
-            padding: 20px;
-            border: 1px solid #ccc;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-        }
-        .main-content {
-            border: 1px solid #ccc;
-            padding: 10px;
-        }
-        form {
-            margin-top: 20px;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Sederhana</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Memulai dengan HTML</h1>
-        <p>Judul dan Paragraf</p>
-        <a href="#">Tautan</a>
-        <img src="gambar.jpg" alt="Gambar">
+    </header>
+
+    <nav>
         <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
+            <li><a href="#judul-paragraph">Judul dan Paragraf</a></li>
+            <li><a href="#tautan">Tautan</a></li>
+            <li><a href="#gambar">Gambar</a></li>
+            <li><a href="#daftar">Daftar (List)</a></li>
+            <li><a href="#memulai-css">Memulai dengan CSS</a></li>
         </ul>
-        <h1>Memulai dengan CSS</h1>
-        <p>Warna</p>
-        <p>Ukuran Font dan Jenis Font</p>
-        <p>Lebar, Tinggi, dan Warna Latar Belakang</p>
-        <p>Class</p>
-        <h2>Dasar Layout (Tata Letak)</h2>
-        <h3>Struktur dari HTML</h3>
-        <h3>Struktur dari HTML (2)</h3>
-        <h2>Dasar Tata Letak</h2>
-        <h3>Header</h3>
-        <p>Struktur dari Header</p>
-        <p>Tata Letak dari Header</p>
-        <p>Padding</p>
-        <h3>Footer</h3>
-        <p>Struktur dari Footer</p>
-        <p>Tata Letak dari Footer</p>
-        <h3>Isi</h3>
-        <p>Tata Letak Bagian Utama</p>
-        <p>Struktur dari Isi</p>
-        <p>Border (Batas)</p>
-        <p>Padding dan Margin</p>
-        <h3>Formulir</h3>
-        <p>Tata Letak dari Formulir</p>
-        <p>Tata Letak dari Formulir (2)</p>
-        <form>
-            <!-- Elemen-elemen formulir dapat ditambahkan di sini -->
-        </form>
-    </div>
+    </nav>
+
+    <main>
+        <section id="judul-paragraph">
+            <h2>Judul dan Paragraf</h2>
+            <p>Ini adalah contoh teks paragraf. Anda dapat menambahkan judul dengan menggunakan elemen &lt;h1&gt; hingga &lt;h6&gt;.</p>
+        </section>
+
+        <section id="tautan">
+            <h2>Tautan</h2>
+            <p>Anda dapat membuat tautan dengan menggunakan elemen &lt;a&gt;. Contoh: <a href="https://www.contoh.com">Klik di sini</a></p>
+        </section>
+
+        <section id="gambar">
+            <h2>Gambar</h2>
+            <img src="gambar.jpg" alt="Deskripsi Gambar">
+        </section>
+
+        <section id="daftar">
+            <h2>Daftar (List)</h2>
+            <h3>Daftar Terurut (Ordered List)</h3>
+            <ol>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+            </ol>
+            <h3>Daftar Tidak Terurut (Unordered List)</h3>
+            <ul>
+                <li>Item A</li>
+                <li>Item B</li>
+                <li>Item C</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Website Sederhana</p>
+    </footer>
 </body>
 </html>
+
