--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav>
         <ul>
-            <li><a href="#judul-paragraph">Judul dan Paragraf</a></li>
+            <li><a href="#judul-paragraf">Judul dan Paragraf</a></li>
             <li><a href="#tautan">Tautan</a></li>
             <li><a href="#gambar">Gambar</a></li>
             <li><a href="#daftar">Daftar (List)</a></li>
@@ -21,42 +21,53 @@
         </ul>
     </nav>
 
-    <main>
-        <section id="judul-paragraph">
-            <h2>Judul dan Paragraf</h2>
-            <p>Ini adalah contoh teks paragraf. Anda dapat menambahkan judul dengan menggunakan elemen &lt;h1&gt; hingga &lt;h6&gt;.</p>
-        </section>
+    <section id="judul-paragraf">
+        <h2>Judul dan Paragraf</h2>
+        <p>Ini adalah contoh judul dan paragraf dalam HTML.</p>
+    </section>
 
-        <section id="tautan">
-            <h2>Tautan</h2>
-            <p>Anda dapat membuat tautan dengan menggunakan elemen &lt;a&gt;. Contoh: <a href="https://www.contoh.com">Klik di sini</a></p>
-        </section>
+    <section id="tautan">
+        <h2>Tautan</h2>
+        <p>Ini adalah <a href="#">contoh tautan</a> dalam HTML.</p>
+    </section>
 
-        <section id="gambar">
-            <h2>Gambar</h2>
-            <img src="gambar.jpg" alt="Deskripsi Gambar">
-        </section>
+    <section id="gambar">
+        <h2>Gambar</h2>
+        <img src="gambar.jpg" alt="Contoh Gambar">
+    </section>
 
-        <section id="daftar">
-            <h2>Daftar (List)</h2>
-            <h3>Daftar Terurut (Ordered List)</h3>
-            <ol>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-            </ol>
-            <h3>Daftar Tidak Terurut (Unordered List)</h3>
-            <ul>
-                <li>Item A</li>
-                <li>Item B</li>
-                <li>Item C</li>
-            </ul>
-        </section>
-    </main>
+    <section id="daftar">
+        <h2>Daftar (List)</h2>
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+    </section>
+
+    <section id="memulai-css">
+        <h1>Memulai dengan CSS</h1>
+        <h2>Warna</h2>
+        <p style="color: blue;">Ini adalah teks dengan warna biru.</p>
+
+        <h2>Ukuran Font dan Jenis Font</h2>
+        <p style="font-size: 18px; font-family: Arial, sans-serif;">Ini adalah teks dengan ukuran font 18px dan jenis font Arial.</p>
+
+        <h2>Lebar, Tinggi, dan Warna Latar Belakang</h2>
+        <div style="width: 300px; height: 200px; background-color: lightgray;"></div>
+
+        <h2>Class</h2>
+        <p class="custom-class">Ini adalah teks dengan class CSS kustom.</p>
+
+        <h2>Dasar Layout (Tata Letak)</h2>
+        <div class="container">
+            <div class="sidebar">Sidebar</div>
+            <div class="content">Content</div>
+        </div>
+    </section>
 
     <footer>
         <p>&copy; 2023 Website Sederhana</p>
     </footer>
 </body>
 </html>
-
