--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>YUSMA LANA</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Progate</div>
+      <div class="header-logo">NAA WEB</div>
       <div class="header-list">
         <ul>
-          <li>Tentang</li>
-          <li>Pelajaran</li>
-          <li>Hubungi Kami</li>
+          <li>HOME</li>
+          <li>ABOUT</li>
+          <li>CONTACT</li>
         </ul>
       </div>
     </div>
 
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO WORLD<span>.</span></h1>
-        <h2>Ayo belajar coding</h2>
+        <h1>HOW'S YOUR DAY?<span>.</span></h1>
+        <h2>Ikan Hiu Kena Vertigo, I Lovu You but I'm Letting Go</h2>
       </div>
       
       <div class="contents">
-        <h3 class="section-title">Pelajaran</h3>
+        <h2 class="section-title">Zodiak</h2>
         <div class="contents-item">
           <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
           <p>HTML & CSS</p>
