--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       
       <div class="contents">
-        <h2 class="section-title">Zodiak</h2>
+        <h2 class="section-title">Mana nih yang kamu banget</h2>
         <div class="contents-item">
           <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
           <p>HTML & CSS</p>
