--- a/index.html
+++ b/index.html
@@ -58,6 +58,46 @@
         </ul>
       </div>
     </div>
+    <h2>ISI DATA DIRI KAMU DULU YA</h2>
+<form action="proses_form.php" method="post">
+    <label for="first_name">First Name:</label>
+    <input type="text" id="first_name" name="first_name" required><br><br>
+
+    <label for="last_name">Last Name:</label>
+    <input type="text" id="last_name" name="last_name" required><br><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="pass">Password:</label>
+    <input type="pass" id="pass" name="pass" required><br><br>
+
+    <p>Gender:
+		<form action="/action_page.php">
+  		<input type="radio" id="Man" name="Gender" value="Man">
+  		<label for="Man">Man</label>
+  		<input type="radio" id="Woman" name="Gender" value="Woman">
+  		<label for="Woman">Woman</label><br><br>
+    </p>
+  		<label for="birthday">Birthday:</label>
+  		<input type="date" id="birthday" name="birthday"><br><br>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" value="Malang"><br><br>
+
+    <form action="proses_form.php" method="POST">
+        <label for="country">Country:</label>
+        <select id="country" name="country">
+            <option value="Indonesia">Indonesia</option>
+        </select><br><br>
+
+        <label for="photo">Upload Photo:</label>
+        <input type="file" id="photo" name="photo"><br><br>
+        <label for="description">Description:</label><br>
+        <textarea id="description" name="description" rows="4" cols="50"></textarea><br><br>
+        <input type="submit" value="Submit">
+      </form>     
+
+</form>
   </body>
 </html>
 
