--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tugas Profil Saya</title>
     </head>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="ppk.css">
+<link rel="stylesheet" href="stylesheet.css">
 <body>
     <div class="container">
         <header class="header">
