--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
             </header>
 
-        <img src="ftsyy.jpg" alt="Foto Profil" class="profile-picture">
+        <img src="https://drive.google.com/file/d/1PJyIBkXi_suSfp8kKTO56Td8tsVti_-i/view?usp=sharing" alt="Foto Profil" class="profile-picture">
         <h1>YUSMA LANA FAUZIAH</h1>
         <section id="home">
             <h2>Home</h2>
